[package]
name = "pg_merkle_tree"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "pgrx_embed_pg_merkle_tree"
path = "./src/bin/pgrx_embed.rs"

[features]
default = ["pg18"]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13" ]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14" ]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15" ]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16" ]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17" ]
pg18 = ["pgrx/pg18", "pgrx-tests/pg18" ]
pg_test = []

[dependencies]
pgrx = "=0.16.1"
ark-bn254 = { git = "https://github.com/arkworks-rs/algebra", features = ["std"]}
ark-serialize = { git = "https://github.com/arkworks-rs/algebra", features = ["std", "serde", "serde_with"] }
ark-ff = { git = "https://github.com/arkworks-rs/algebra", features = ["std"] }
static_assertions = "1.1.0"

[dev-dependencies]
pgrx-tests = "=0.16.1"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
