[package]
name = "sqlx_binary_protocol"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
ark-bn254 = { git = "https://github.com/arkworks-rs/algebra", features = ["std"]}
ark-serialize = { git = "https://github.com/arkworks-rs/algebra", features = ["std", "serde", "serde_with"] }
ark-ff = { git = "https://github.com/arkworks-rs/algebra", features = ["std"] }
serde = { version = "1.0.228" , features = ["derive"] }
serde_with = "3.16.1"
serde_cbor = "0.11.2"
env_logger = "0.11.8"